removed api key

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <script src="main.js"></script>
     <script
       type="text/javascript"
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCOHMTFqcjeR0VmeOeYa6KeZENyM3xrKzo&callback=initMap&libraries=places"
+      src="https://maps.googleapis.com/maps/api/js?key=API-KEY-GOES-HERE&callback=initMap&libraries=places"
     ></script>
   </body>
 </html>
